// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CInputCheckbox renders correctly 1`] = `
<div
  class="custom-control custom-control-inline custom-checkbox was-validated"
  role="group"
>
   
  <!---->
   
  <input
    class="custom-control-input is-valid additional-input-class"
    id="some_id"
    type="checkbox"
    value="value"
  />
   
  <label
    class="additional-label-class custom-control-label"
    for="some_id"
  >
    
        label
      
  </label>
   
  <!---->
   
  <div
    class="valid-tooltip"
  >
    input is valid
  </div>
   
  <div
    class="invalid-tooltip"
  >
    input is invalid
  </div>
   
  <small
    class="form-text text-muted w-100"
  >
    permission
  </small>
</div>
`;

exports[`CInputCheckbox renders correctly basic checkbox 1`] = `
<div
  class="form-check"
  role="group"
>
   
  <!---->
   
  <input
    class="form-check-input"
    id="some_id"
    type="checkbox"
  />
   
  <label
    class="form-check-label"
    for="some_id"
  >
    
        label
      
  </label>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;
